- Añadida separación por empresas al selector de ejercicios. - Actualizadas las traducciones.

--- a/facturascripts.ini
+++ b/facturascripts.ini
@@ -1,4 +1,4 @@
-description = 'Modelo 130'
-min_version = 2022
 name = Modelo130
-version = 3.1
+description = 'Modelo 130 de la AEAT'
+version = 3.2
+min_version = 2022.6
