--- a/facturascripts.ini
+++ b/facturascripts.ini
@@ -1,4 +1,4 @@
-name = Modelo130
+name = 'Modelo130'
 description = 'Modelo 130 de la AEAT (agencia tributaria española)'
 version = 3.6
 min_version = 2024
